// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h3>
    Homero
  </h3>
  <p
    className="card animate__animated animate__flash"
  >
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3>
    Homero
  </h3>
  <p
    className="card animate__animated animate__flash"
  >
    Carga completa
  </p>
  <div
    className="card-grid"
  >
    <GifGridItem
      0={
        Object {
          "id": "ABC",
          "title": "CUalquier cosa",
          "url": "https://localhost/cualquier/cosa.jpg",
        }
      }
    />
  </div>
</Fragment>
`;
